WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179837
AX: [ATK] Fix WKTR's methods for testing row header and column header presence and count
https://bugs.webkit.org/show_bug.cgi?id=179837
Summary
AX: [ATK] Fix WKTR's methods for testing row header and column header presenc...
Joanmarie Diggs
Reported
2017-11-17 13:01:08 PST
We currently have these methods: 1. rowHeaders() and columnHeaders() 2. getRowHeaders() and getColumnHeaders() The methods in item 1 should return the headers if given a cell or a table. columnHeaders() does so, but rowHeaders() does not. These methods are to be implemented by all platforms, so we need to fix this. The methods in item 1 should return an empty array and not nullptr upon failure. Tests might ask for the length of the array and we should handle that gracefully. The methods in item 2 only get headers if given a table. Unlike the methods in item 1, these methods are just helper methods for our platform. Let's rename them to something a tad clearer. The methods in item 2 call atk_table_get_{row,column}_header. Those ATK methods take an index and return a header if there's one there and otherwise null. We should not append null objects to the array of headers because it leads to bogus results.
Attachments
Patch
(13.15 KB, patch)
2017-11-17 13:38 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-11-17 13:01:39 PST
<
rdar://problem/35621868
>
Joanmarie Diggs
Comment 2
2017-11-17 13:29:01 PST
***
Bug 176798
has been marked as a duplicate of this bug. ***
Joanmarie Diggs
Comment 3
2017-11-17 13:38:03 PST
Created
attachment 327227
[details]
Patch
WebKit Commit Bot
Comment 4
2017-11-17 14:09:56 PST
Comment on
attachment 327227
[details]
Patch Clearing flags on attachment: 327227 Committed
r224986
: <
https://trac.webkit.org/changeset/224986
>
WebKit Commit Bot
Comment 5
2017-11-17 14:09:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug