AX: [ATK] Fix WKTR's methods for testing row header and column header presence and count https://bugs.webkit.org/show_bug.cgi?id=179837

Reviewed by Chris Fleizach.

Tools:

Add support to rowHeaders() for tables. Return an empty array in rowHeaders()
and columnHeaders() upon failure. Rename getRowHeaders() and getColumnHeaders()
to getTableRowHeaders() and getTableColumnHeaders() respectively.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::rowHeaders const):
(WTR::AccessibilityUIElement::columnHeaders const):
(WTR::AccessibilityUIElement::attributesOfColumnHeaders):
(WTR::AccessibilityUIElement::attributesOfRowHeaders):

LayoutTests:

* accessibility/gtk/table-headers-count-expected.txt: Added.
* accessibility/gtk/table-headers-count.html: Added.
* platform/gtk/TestExpectations: Remove a couple of "crash" failures.
* platform/gtk/accessibility/table-sections-expected.txt: Remove null objects.


Canonical link: https://commits.webkit.org/195856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224986 268f45cc-cd09-0410-ab3c-d52691b4dbfc